everything for full screen use is done

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ h5 {
     font-weight: 700;
     text-align: center;
     line-height: 1.5;
+    letter-spacing: 0.1em;
 }
 p {
     color: rgb(124, 139, 161);
@@ -72,6 +73,9 @@ p {
 }
 .link__hover-effect--black:after {
     background-color: rgb(100, 21, 255);
+}
+.link__hover-effect--white:after {
+    background-color: rgb(247, 250, 252);
 }
 
 /* NAVIGATION */
@@ -353,3 +357,286 @@ nav {
     border: 1px rgb(226,232,240) solid;
 }
 
+/* Steps */
+.steps--container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.steps__img--container {
+    width: 50%;
+}
+.steps__img {
+    width: 100%;
+}
+
+.steps__info--sub-heading {
+    text-align: left;
+}
+.steps__info--title {
+    text-align: left;
+    margin-top: 16px;
+}
+
+.step {
+    display: flex;
+    margin-top: 32px;
+}
+.step__number {
+    color: rgb(203, 213, 224);
+    font-size: 36px;
+    font-weight: 600;
+}
+
+.step__info {
+    display: flex;
+    flex-direction: column;
+    margin-left: 24px;
+}
+.step__info--title {
+    text-align: left;
+    color: rgb(36,62,99);
+    font-size: 20px;
+    font-weight: 600;
+}
+.step__info--para {
+    text-align: left;
+    font-size: 14px;
+    font-weight: 500;
+    max-width: 320px;
+    margin-top: 12px;
+}
+
+/* Pricing */
+.pricing--container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.pricing--sub-heading {
+    margin-bottom: 16px;
+}
+.pricing--para {
+    margin-top: 16px;
+    max-width: 576px;
+}
+
+.plans__container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.plan {
+    width: calc(calc(100%/3) - 32px);
+    margin: 64px 16px 0 16px;
+    padding: 8px -32px 0 -32px;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
+}
+.plan__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 32px 0;
+}
+.plan__header--title {
+    margin: 4px 0;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.625;
+}
+.plan__header--price {
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 1.625;
+}
+.plan__header--time {
+    font-weight: 700;
+    line-height: 1.625;
+    letter-spacing: 0.1em;
+    color: rgb(160, 174, 192);
+}
+
+.plan__features {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 32px 0;
+
+}
+.plan__features--title {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.5;
+}
+.plan__features--feature {
+    margin-top: 20px;
+    font-weight: 500;
+}
+.grey-border {
+    border-top: 2px rgb(226,232,240) solid;
+    border-bottom: 2px rgb(226,232,240) solid;
+}
+.white-border {
+    border-top: 2px rgb(102,126,234) solid;
+    border-bottom: 2px rgb(102,126,234) solid;
+}
+
+.plan__footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 32px;
+}
+.plan__footer--button {
+    padding: 16px 32px;
+    border: none;
+    border-radius: 25px;
+    width: 90%;
+    font-size: 14px;
+    font-weight: 700;
+    text-align: center;
+    transition: all 300ms ease;
+}
+.plan__footer--button:hover {
+    transform: translateX(2px) translateY(-2px);
+    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
+}
+
+.plan__personal {
+    color: rgb(26, 32, 44);
+}
+.plan__personal--styled-header {
+    background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+    height: 8px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+.plan__personal--button {
+    background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+    color: rgb(247, 250, 252);
+}
+.plan__business {
+    background-color: rgb(100, 21, 255);
+    background: linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);
+    border-radius: 8px;
+    color: rgb(247, 250, 252);
+}
+.plan__business--styled-header {
+    height: 8px;
+}
+.plan__business--time {
+    color: rgb(247, 250, 252);
+}
+.plan__business--button {
+    color: rgb(70, 15, 179);
+    background-color: rgb(247, 250, 252);
+}
+.plan__enterprise {
+    color: rgb(26, 32, 44);
+}
+.plan__enterprise--styled-header {
+    background:  linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    height: 8px;
+}
+.plan__enterprise--button {
+    background:  linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
+    color: rgb(237, 242, 247);
+}
+
+/* Footer */
+footer {
+    background: rgb(100, 21, 255);
+}
+
+.links--container {
+    display: flex;
+    justify-content: space-between;
+}
+.links {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+.link--title {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.5;
+    color: rgb(247, 250, 252);
+}
+.footer__links {
+    margin-top: 24px;
+}
+.footer__link {
+    padding-bottom: 4px;
+    margin-top: 12px;
+}
+.footer__link--anchor {
+    font-size: 14px;
+    font-weight: 500;
+    color: rgb(247, 250, 252);
+    line-height: 1.5;
+}
+
+.footer__line {
+    border: 1px rgb(116, 44, 255) solid;
+    margin: 64px 0;
+}
+
+.footer__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer__logo {
+    display: flex;
+    align-items: center;
+}
+.footer__logo--text {
+    font-size: 20px;
+    font-weight: 900;
+    line-height: 1.5;
+    color: rgb(247, 250, 252);
+    margin-left: 8px;
+}
+.footer__img--container {
+    width: 32px;
+    height: 32px;
+}
+.footer__img {
+    width: 100%;
+}
+
+.footer__copyright {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    color: rgb(203, 213, 224);
+}
+
+.footer__socials {
+    display: flex;
+    align-items: center;
+} 
+.footer__social {
+    background-color: rgb(226,232,240);
+    border-radius: 25px;
+    height: 36px;
+    width: 36px;
+    margin-right: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    color: rgb(26, 32, 44);
+    transition: all 300ms ease;
+}
+.footer__social:hover {
+    background-color: rgb(160, 174, 192);
+}
