--- a/styles.css
+++ b/styles.css
@@ -82,10 +82,10 @@ p {
 }
 
 .animate--left {
-    /*animation: animate-left 600ms 200ms;*/
+    animation: animate-left 600ms 200ms;
 }
 .animate--right {
-    /*animation: animate-right 600ms 200ms;*/
+    animation: animate-right 600ms 200ms;
 }
 @keyframes animate-left {
     0% {
@@ -911,8 +911,13 @@ footer {
     }
 
     /* footer */
+    .links--container {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
     .links {
         align-items: center;
+        margin: 12px 16px;
     }
     .footer__links {
         align-items: center;
